[package]
name = "git-scout"
version = "0.1.0"
edition = "2024"
description = "Scan directories for git repositories with uncommitted changes, untracked files, or unpushed commits"
license = "MIT"
repository = "https://github.com/LucaMezz/git-scout"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
gix = { version = "0.84.0", features = ["status"] }
ignore = "0.4.26"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
colored = "2"
is-terminal = "0.4"
